Stubbed out Role#actor and Role#movie methods.

--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -7,12 +7,18 @@
 
 <p>
   <b>Actor:</b>
-  <%= @role.actor_id %>
+  <%= @role.actor.name %>
 </p>
 
 <p>
   <b>Movie:</b>
-  <%= @role.movie_id %>
+  <%= @role.movie.title %>
 </p>
+
+
+
+
+
+
 
 
