--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -10,4 +10,11 @@
   <%= @actor.dob %>
 </p>
 
-
+<p>
+  <b>Filmography:</b>
+  <ul>
+    <% @actor.roles.each do |role| %>
+      <li><%= role.character_name %></li>
+    <% end %>
+  </ul>
+</p>
