--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -11,10 +11,19 @@
 </p>
 
 <p>
-  <b>Filmography:</b>
+  <b>Roles:</b>
   <ul>
     <% @actor.roles.each do |role| %>
       <li><%= role.character_name %></li>
     <% end %>
   </ul>
 </p>
+
+
+
+
+
+
+
+
+
