Completed Movie#roles and Actor#roles methods, and used them in the show pages.

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -15,6 +15,15 @@
   <%= @movie.director.name %>
 </p>
 
+<p>
+  <b>Roles:</b>
+  <ul>
+    <% @movie.roles.each do |role| %>
+      <li><%= role.character_name %></li>
+    <% end %>
+  </ul>
+</p>
+
 
 
 
