--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <nav>
+    <%= link_to "Directors", directors_url %> |
+    <%= link_to "Movies", movies_url %> |
+    <%= link_to "Roles", roles_url %> |
+    <%= link_to "Actors", actors_url %>
+  </nav>
 <%= yield %>
 
 </body>
