--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -16,15 +16,13 @@
 </p>
 
 <p>
-  <b>Roles:</b>
+  <b>Cast:</b>
   <ul>
     <% @movie.roles.each do |role| %>
-      <li><%= role.character_name %></li>
+      <li><%= role.actor.name %></li>
     <% end %>
   </ul>
 </p>
-
-
 
 
 
