Updated nav bar with users.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
     <%= link_to "Directors", directors_url %> |
     <%= link_to "Movies", movies_url %> |
     <%= link_to "Roles", roles_url %> |
-    <%= link_to "Actors", actors_url %>
+    <%= link_to "Actors", actors_url %> |
+    <%= link_to "Users", users_url %>
   </nav>
 <%= yield %>
 
