--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Users</h1>
 
+<p><%= notice %></p>
+
 <p><%= link_to 'Add a New User', new_user_url %></p>
 
 <table>
@@ -16,7 +18,7 @@
   <% @users.each do |user| %>
     <tr>
       <td><%= user.username %></td>
-  
+
       <td><%= link_to 'Show', user_url(user) %></td>
       <td><%= link_to 'Edit', edit_user_url(user) %></td>
       <td><%= link_to 'Destroy', user_url(user), method: 'delete', data: { confirm: "Do you really want to delete this user?" } %></td>
