--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -24,6 +24,14 @@
   </ul>
 </p>
 
+<p>
+  <b>Voters (<%= @movie.votes.count %>):</b>
+  <ul>
+    <% @movie.users.each do |user| %>
+      <li><%= user.username %></li>
+    <% end %>
+  </ul>
+</p>
 
 
 
