Started building sign-in system.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
     <%= link_to "Movies", movies_url %> |
     <%= link_to "Roles", roles_url %> |
     <%= link_to "Actors", actors_url %> |
-    <%= link_to "Users", users_url %>
+    <%= link_to "Users", users_url %> |
+    <%= link_to "Votes", votes_url %>
   </nav>
 <%= yield %>
 
