--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,30 @@
     <%= link_to "Roles", roles_url %> |
     <%= link_to "Actors", actors_url %> |
     <%= link_to "Users", users_url %> |
-    <%= link_to "Votes", votes_url %>
+    <%= link_to "Votes", votes_url %> |
+    <% if session[:username].present? %>
+      <%= link_to "Sign Out", sessions_url, method: 'delete' %> |
+    <% else %>
+      <%= link_to "Sign In", new_session_url %> |
+      <%= link_to "Sign Up", new_user_url %>
+    <% end %>
   </nav>
+  <% if session[:username].present? %>
+    <p>Welcome back, <%= session[:username] %>!</p>
+  <% end %>
+  <p><%= notice %></p>
 <%= yield %>
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
