--- a/app/views/votes/new.html.erb
+++ b/app/views/votes/new.html.erb
@@ -2,12 +2,8 @@
 
 
 <%= form_tag(votes_url, method: 'post') do %>
-
-
-  <div>
-    <%= label_tag :user_id %><br />
-    <%= select_tag :user_id, options_from_collection_for_select(User.all, :id, :username) %>
-  </div>
+    <% u = User.find_by_username(session[:username]) %>
+    <input name="user_id" type="hidden" value="<%= u.id %>">
 
     <div>
     <%= label_tag :movie_id %><br />
