--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,6 +10,10 @@
     <%= text_field_tag :username %>
   </div>
 
+  <div>
+    <%= label_tag :password %><br />
+    <%= password_field_tag :password %>
+  </div>
 
   <div>
     <%= submit_tag "Create User" %>
