--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,7 +8,16 @@
     <%= text_field_tag :username, @user.username %>
   </div>
 
-  
+  <div>
+    <%= label_tag :password %><br />
+    <%= password_field_tag :password %>
+  </div>
+
+  <div>
+    <%= label_tag :password %><br />
+    <%= password_field_tag :password_confirmation %>
+  </div>
+
   <div>
     <%= submit_tag "Update User" %>
   </div>
