--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,6 +16,11 @@
   </div>
 
   <div>
+    <%= label_tag :password %><br />
+    <%= password_field_tag :password_confirmation %>
+  </div>
+
+  <div>
     <%= submit_tag "Create User" %>
   </div>
 <% end %>
