--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,43 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Academy Movie Database</title>
+  <meta charset="utf-8">
+  <title>Amdb</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  <link href='http://fonts.googleapis.com/css?family=Noto+Serif' rel='stylesheet' type='text/css'>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <nav>
-    <%= link_to "Directors", directors_url %> |
-    <%= link_to "Movies", movies_url %> |
-    <%= link_to "Roles", roles_url %> |
-    <%= link_to "Actors", actors_url %> |
-    <%= link_to "Users", users_url %> |
-    <%= link_to "Votes", votes_url %> |
-    <% if signed_in? %>
-      <%= link_to "Sign Out", sessions_url, method: 'delete' %> |
-    <% else %>
-      <%= link_to "Sign In", new_session_url %> |
-      <%= link_to "Sign Up", new_user_url %>
+
+  <div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </a>
+        <a class="brand" href="/">Amdb</a>
+        <div class="nav-collapse">
+          <ul class="nav">
+            <li><%= link_to "Home", root_url %></li>
+            <li><%= link_to "Directors", directors_url %></li>
+            <li><%= link_to "Movies", movies_url %></li>
+            <li><%= link_to "Actors", actors_url %></li>
+            <li><%= link_to "Roles", roles_url %></li>
+            <li><%= link_to "Votes", votes_url %></li>
+            <li><%= link_to "Users", users_url %></li>
+            <% if signed_in? %>
+              <li><%= link_to current_user.username.capitalize, current_user %></li>
+              <li><%= link_to "Sign Out", sessions_url, method: 'delete' %></li>
+            <% else %>
+              <li><%= link_to "Sign In", new_session_url %></li>
+              <li><%= link_to "Sign Up", new_user_url %></li>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+
+    <% if notice.present? %>
+    <div class="alert alert-success">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <%= notice %>
+    </div>
     <% end %>
-  </nav>
-  <% if signed_in? %>
-    <p>Welcome back, <%= current_user.username %>!</p>
-  <% end %>
-  <p><%= notice %></p>
-<%= yield %>
+
+    <%= yield %>
+
+    <hr>
+
+    <footer>
+      <p>&copy; Company 2012</p>
+    </footer>
+
+  </div>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
