--- a/app/views/actors/edit.html.erb
+++ b/app/views/actors/edit.html.erb
@@ -1,5 +1,12 @@
 <h1>Editing Actor #<%= @actor.id %></h1>
 
+<% if @actor.errors.any? %>
+  <ul>
+    <% @actor.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <%= form_tag(actor_url(@actor), method: 'put') do %>
 
