--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,5 +1,12 @@
 <h1>New Movie</h1>
 
+<% if @movie.errors.any? %>
+  <ul>
+    <% @movie.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <%= form_tag(movies_url, method: 'post') do %>
 
