--- a/app/views/roles/new.html.erb
+++ b/app/views/roles/new.html.erb
@@ -1,5 +1,12 @@
 <h1>New Role</h1>
 
+<% if @role.errors.any? %>
+  <ul>
+    <% @role.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <%= form_tag(roles_url, method: 'post') do %>
 
