--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
 
 <p><%= link_to 'Add a New User', new_user_url %></p>
 
-<table>
+<table class="table table-striped table-hover">
   <thead>
     <tr>
       <th>Username</th>
