--- a/app/views/votes/edit.html.erb
+++ b/app/views/votes/edit.html.erb
@@ -1,5 +1,12 @@
 <h1>Editing Vote #<%= @vote.id %></h1>
 
+<% if @vote.errors.any? %>
+  <ul>
+    <% @vote.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <%= form_tag(vote_url(@vote), method: 'put') do %>
 
@@ -13,7 +20,7 @@
     <%= number_field_tag :movie_id, @vote.movie_id %>
   </div>
 
-  
+
   <div>
     <%= submit_tag "Update Vote" %>
   </div>
