Added an upvote button on the movies index page. Getting ready to write a custom validation method for a vote.

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Movies</h1>
 
-<p><%= link_to 'Add a New Movie', new_movie_url %></p>
+<p><%= link_to 'Add a New Movie', new_movie_url, class: 'btn' %></p>
 
 <table class="table table-striped table-hover">
   <thead>
@@ -8,6 +8,7 @@
       <th>Title</th>
       <th>Year</th>
       <th>Director</th>
+      <th></th>
       <th></th>
       <th></th>
       <th></th>
@@ -20,10 +21,16 @@
       <td><%= movie.title %></td>
       <td><%= movie.year %></td>
       <td><%= movie.director.name %></td>
-
-      <td><%= link_to 'Show', movie_url(movie) %></td>
-      <td><%= link_to 'Edit', edit_movie_url(movie) %></td>
-      <td><%= link_to 'Destroy', movie_url(movie), method: 'delete', data: { confirm: "Do you really want to delete this movie?" } %></td>
+      <td>
+        <%= form_tag votes_url, method: 'post' do %>
+          <%= hidden_field_tag :user_id, session[:user_id] %>
+          <%= hidden_field_tag :movie_id, movie.id %>
+          <%= button_tag "+1", class: 'btn btn-success' %>
+        <% end %>
+      </td>
+      <td><%= link_to 'Show', movie_url(movie), class: 'btn btn-primary' %></td>
+      <td><%= link_to 'Edit', edit_movie_url(movie), class: 'btn btn-warning' %></td>
+      <td><%= link_to 'Destroy', movie_url(movie), class: 'btn btn-danger', method: 'delete', data: { confirm: "Do you really want to delete this movie?" } %></td>
 
     </tr>
   <% end %>
