--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -8,6 +8,7 @@
       <th>Title</th>
       <th>Year</th>
       <th>Director</th>
+      <th>Votes</th>
       <th></th>
       <th></th>
       <th></th>
@@ -21,6 +22,7 @@
       <td><%= movie.title %></td>
       <td><%= movie.year %></td>
       <td><%= movie.director.name %></td>
+      <td><%= movie.votes.count %></td>
       <td>
         <%= form_tag votes_url, method: 'post' do %>
           <%= hidden_field_tag :user_id, session[:user_id] %>
