--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -14,7 +14,7 @@
   <b>Filmography:</b>
   <ul>
     <% @actor.movies.each do |movie| %>
-      <li><%= movie.title %></li>
+      <li><%= link_to movie.title, movie %></li>
     <% end %>
   </ul>
 </p>
