--- a/app/views/actors/new.html.erb
+++ b/app/views/actors/new.html.erb
@@ -8,20 +8,29 @@
   </ul>
 <% end %>
 
+<%= form_for @actor do |f| %>
+  <div>
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+  </div>
+  <div>
+    <%= f.label :dob %><br />
+    <%= f.text_field :dob %>
+  </div>
+  <div>
+    <%= f.submit %>
+  </div>
+<% end %>
+
 <%= form_tag(actors_url, method: 'post') do %>
-
-
   <div>
     <%= label_tag :name %><br />
     <%= text_field_tag :name %>
   </div>
-
-    <div>
+  <div>
     <%= label_tag :dob %><br />
     <%= text_field_tag :dob %>
   </div>
-
-
   <div>
     <%= submit_tag "Create Actor" %>
   </div>
