--- a/app/views/actors/edit.html.erb
+++ b/app/views/actors/edit.html.erb
@@ -8,21 +8,16 @@
   </ul>
 <% end %>
 
-<%= form_tag(actor_url(@actor), method: 'put') do %>
-
+<%= form_for @actor do |f| %>
   <div>
-    <%= label_tag :name %><br />
-    <%= text_field_tag :name, @actor.name %>
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
   </div>
-
   <div>
-    <%= label_tag :dob %><br />
-    <%= text_field_tag :dob, @actor.dob %>
+    <%= f.label :dob %><br />
+    <%= f.text_field :dob %>
   </div>
-
-
   <div>
-    <%= submit_tag "Update Actor" %>
+    <%= f.submit %>
   </div>
-
 <% end %>
