--- a/app/views/actors/edit.html.erb
+++ b/app/views/actors/edit.html.erb
@@ -1,23 +1,4 @@
 <h1>Editing Actor #<%= @actor.id %></h1>
 
-<% if @actor.errors.any? %>
-  <ul>
-    <% @actor.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
+<%= render 'form' %>
 
-<%= form_for @actor do |f| %>
-  <div>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div>
-    <%= f.label :dob %><br />
-    <%= f.text_field :dob %>
-  </div>
-  <div>
-    <%= f.submit %>
-  </div>
-<% end %>
