--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -16,11 +16,7 @@
   <tbody>
   <% @votes.each do |vote| %>
     <tr>
-      <td>
-        <% if vote.user.present? %>
-          <%= vote.user.username %>
-        <% end %>
-      </td>
+      <td><%= vote.user.username %></td>
       <td><%= vote.movie.title %></td>
       <% if vote.user == current_user %>
         <td><%= link_to 'Show', vote_url(vote) %></td>
